<?xml version="1.0"?>
<package format="2">
  <name>ars408_ros</name>
  <version>0.0.1</version>
  <description>ARS408 radar + YOLOv8 fusion ROS node</description>
  <maintainer email="test@test.com">test</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>can_msgs</depend>
</package>
